已修复“结果整理失败”。 根因是 SQL 查询结果包含合法的 NULL 字段，分析适配器调用 Map.copyOf() 时触发 NPE。现在： - 保留业务数据中的 SQL NULL。 - 过滤分析上下文中的空元数据。 - 不影响之前实现的用户出站原始数据裁剪。 修改位置：[McpAnalysisPayloadResultAnalysisAdapter.java (line 220)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/main/java/com/chatchat/agents/runtime/analysis/McpAnalysisPayloadResultAnalysisAdapter.java:220) 回归测试：[McpAnalysisPayloadResultAnalysisAdapterTest.java (line 16)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/test/java/com/chatchat/agents/runtime/analysis/McpAnalysisPayloadResultAnalysisAdapterTest.java:16) 验证结果：相关测试 7/7 通过，构建成功。重新构建并重启后端后，可重试原 ETF 分析任务。